summative.moria.Moria.scala.code
retourne()
while (!estFaceMur())
    {while (!estSurBiscuit())
        avance)()}